# symposium-ai

./: .env.example  .gitignore  README.md  cursor_plan.md  pyproject.toml
arena/: arena.py  artifact.py  artifact_test.txt  cli.py  json_utils.py  prompts.py  schemas.py  settings.py  topics.py  types.py
arena/providers/: anthropic_client.py  base.py  factory.py  gemini_client.py  openai_client.py
